Cleanup code to remove checkstyle / ci build errors (#8)
* Fix checkstyle and error-prone-checks

* Fix return message that was removed by accident

* Replaced illegal junit imports with assertj

* Add missing Apache license header

* Disable MDT writes

* Remove unused io.airlift:aircompressor dependency

* Add missing imports

* Fix use cases where there is a mismatch in ordering of parquet's fileSchema and HiveColumnHandle, which will cause issues when `hudi.parquet.use-column-names=false`

* Fixed test checks

* Add unit tests for:
- HudiPageSourceProvider
- TupleDomainUtils

* Fix read_optimized MOR query tests
- Added cleanup TODOs

---------

Co-authored-by: Sagar Sumit <sagarsumit09@gmail.com>